--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@ License URL: https://creativecommons.org/licenses/by/4.0/
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <link rel="shortcut icon" href="img/favicon.ico">
+    <link rel="shortcut icon" href="img/favicons.png">
     <title>IX-Iwak </title>
 
     <!-- Global stylesheets -->
@@ -31,6 +31,7 @@ License URL: https://creativecommons.org/licenses/by/4.0/
     
     <nav class="navbar navbar-expand-lg navbar-dark bg-primary fixed-top" id="sideNav">
       <a class="navbar-brand js-scroll-trigger" href="#page-top">
+        <span class="d-block d-lg-none  mx-0 px-0"><img src="img/ix.png" alt="" class="img-fluid"></span>
         <span class="d-none d-lg-block">
           <img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="img/favicon.ico" alt="">
         </span>
@@ -57,6 +58,7 @@ License URL: https://creativecommons.org/licenses/by/4.0/
     ======================================================-->
       <section class="resume-section p-3 p-lg-5 d-flex d-column" id="about">
           <div class="my-auto" >
+            <img src="img/ikan.png" class="img-fluid mb-3" alt="">
               <h1 class="mb-0">9
                 <span class="text-primary">Iwakk</span>
               </h1>
@@ -133,7 +135,8 @@ License URL: https://creativecommons.org/licenses/by/4.0/
           <a class="portfolio-link" href="" data-toggle="modal">
               <img class="img-fluid" src="img/gallery/10.jpg" alt="">
           </a>
-      </div> 
+      </div>
+      <img src="img/ikan.png" class="img-fluid mb-3" alt="">
       </section>
 
 
