--- a/index.html
+++ b/index.html
@@ -1,10 +1,3 @@
-<!--
-author: Boostraptheme
-author URL: https://boostraptheme.com
-License: Creative Commons Attribution 4.0 Unported
-License URL: https://creativecommons.org/licenses/by/4.0/
--->
-
 <!DOCTYPE html>
 <html lang="id">
 
@@ -136,6 +129,111 @@ License URL: https://creativecommons.org/licenses/by/4.0/
               <img class="img-fluid" src="img/gallery/10.jpg" alt="">
           </a>
       </div>
+      <div class="col-sm-4 portfolio-item filter finance">
+        <a class="portfolio-link" href="" data-toggle="modal">
+            <img class="img-fluid" src="img/gallery/11.jpg" alt="">
+        </a>
+    </div>
+    <div class="col-sm-4 portfolio-item filter finance">
+        <a class="portfolio-link" href="" data-toggle="modal">
+            <img class="img-fluid" src="img/gallery/12.jpg" alt="">
+        </a>
+    </div>
+    <div class="col-sm-4 portfolio-item filter finance">
+        <a class="portfolio-link" href="" data-toggle="modal">
+            <img class="img-fluid" src="img/gallery/13.jpg" alt="">
+        </a>
+    </div>
+    <div class="col-sm-4 portfolio-item filter finance">
+        <a class="portfolio-link" href="" data-toggle="modal">
+            <img class="img-fluid" src="img/gallery/14.jpg" alt="">
+        </a>
+    </div>
+    <div class="col-sm-4 portfolio-item filter finance">
+        <a class="portfolio-link" href="" data-toggle="modal">
+            <img class="img-fluid" src="img/gallery/15.jpg" alt="">
+        </a>
+    </div>
+    <div class="col-sm-4 portfolio-item filter finance">
+        <a class="portfolio-link" href="" data-toggle="modal">
+            <img class="img-fluid" src="img/gallery/16.jpg" alt="">
+        </a>
+    </div>
+    <div class="col-sm-4 portfolio-item filter finance">
+        <a class="portfolio-link" href="" data-toggle="modal">
+            <img class="img-fluid" src="img/gallery/17.jpg" alt="">
+        </a>
+    </div>
+    <div class="col-sm-4 portfolio-item filter finance">
+        <a class="portfolio-link" href="" data-toggle="modal">
+            <img class="img-fluid" src="img/gallery/18.jpg" alt="">
+        </a>
+    </div>
+    <div class="col-sm-4 portfolio-item filter finance">
+        <a class="portfolio-link" href="" data-toggle="modal">
+            <img class="img-fluid" src="img/gallery/19.jpg" alt="">
+        </a>
+    </div>
+    <div class="col-sm-4 portfolio-item filter finance">
+        <a class="portfolio-link" href="" data-toggle="modal">
+            <img class="img-fluid" src="img/gallery/20.jpg" alt="">
+        </a>
+    </div>
+    <div class="col-sm-4 portfolio-item filter finance">
+        <a class="portfolio-link" href="" data-toggle="modal">
+            <img class="img-fluid" src="img/gallery/21.jpg" alt="">
+        </a>
+    </div>
+    <div class="col-sm-4 portfolio-item filter finance">
+        <a class="portfolio-link" href="" data-toggle="modal">
+            <img class="img-fluid" src="img/gallery/22.jpg" alt="">
+        </a>
+    </div>
+    <div class="col-sm-4 portfolio-item filter finance">
+        <a class="portfolio-link" href="" data-toggle="modal">
+            <img class="img-fluid" src="img/gallery/23.jpg" alt="">
+        </a>
+    </div>
+    <div class="col-sm-4 portfolio-item filter finance">
+        <a class="portfolio-link" href="" data-toggle="modal">
+            <img class="img-fluid" src="img/gallery/24.jpg" alt="">
+        </a>
+    </div>
+    <div class="col-sm-4 portfolio-item filter finance">
+        <a class="portfolio-link" href="" data-toggle="modal">
+            <img class="img-fluid" src="img/gallery/25.jpg" alt="">
+        </a>
+    </div>
+    <div class="col-sm-4 portfolio-item filter finance">
+        <a class="portfolio-link" href="" data-toggle="modal">
+            <img class="img-fluid" src="img/gallery/26.jpg" alt="">
+        </a>
+    </div>
+    <div class="col-sm-4 portfolio-item filter finance">
+        <a class="portfolio-link" href="" data-toggle="modal">
+            <img class="img-fluid" src="img/gallery/27.jpg" alt="">
+        </a>
+    </div>
+    <div class="col-sm-4 portfolio-item filter finance">
+        <a class="portfolio-link" href="" data-toggle="modal">
+            <img class="img-fluid" src="img/gallery/28.jpg" alt="">
+        </a>
+    </div>
+    <div class="col-sm-4 portfolio-item filter finance">
+        <a class="portfolio-link" href="" data-toggle="modal">
+            <img class="img-fluid" src="img/gallery/29.jpg" alt="">
+        </a>
+    </div>
+    <div class="col-sm-4 portfolio-item filter finance">
+        <a class="portfolio-link" href="" data-toggle="modal">
+            <img class="img-fluid" src="img/gallery/30.jpg" alt="">
+        </a>
+    </div>
+    <div class="col-sm-4 portfolio-item filter finance">
+        <a class="portfolio-link" href="" data-toggle="modal">
+            <img class="img-fluid" src="img/gallery/31.jpg" alt="">
+        </a>
+    </div>
       <img src="img/ikan.png" class="img-fluid mb-3" alt="">
       </section>
 
